--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
       - name: conversao-temperatura
-#        image: vcolofati/rotten-potatoes:v1
+        image: vcolofati/conversao-temperatura:latest
         resources:
           limits:
             memory: "128Mi"
@@ -37,7 +37,6 @@ spec:
   ports:
   - port: 80
     targetPort: 5000
-    nodePort: 30000
   type: LoadBalancer
 
 
