Teste, troca imagem

--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
       - name: conversao-temperatura
-        image: vcolofati/conversao-temperatura:latest
+        image: vcolofati/conversao-temperatura:v4
         resources:
           limits:
             memory: "128Mi"
